MDEV-7677 my_charset_handler_filename has a wrong "ismbchar" member